Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaa0UvkADPzw9h18SKGw1B",
+      "authorship_tag": "ABX9TyP4LWg1wcF5yPdj8frtbClG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 36
         },
         "id": "2yrR65ISI5Pw",
-        "outputId": "9a4c02a7-4b85-4392-a416-66525cf60125"
+        "outputId": "08a83341-f0b8-4e67-d543-d60baa377d50"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-93f81bec4bc1>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    a + b =\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to expression\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Life is too short, You need python'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ],
       "source": [
-        " a = 3\n",
-        " b = 4\n",
-        "a + b ="
+        "\"Hello World\"\n",
+        "'Python is fun'\n",
+        "\"\"\"Life is too short, You need python\"\"\"\n"
       ]
     }
   ]
