--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkFJsRVKd4DhB5lHEUgxjV",
+      "authorship_tag": "ABX9TyO3DRIl4bDB42eTqreSj+IG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,33 +28,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 36
         },
         "id": "df6ARUtWWMBj",
-        "outputId": "51b1c612-dd0e-4235-fa20-dc5979b65a2e"
+        "outputId": "41ee2e16-42ca-4172-a505-418243531e70"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "()"
-            ]
+              "'b'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ],
       "source": [
-        "t1 = ()\n",
-        "t2 = (1,)\n",
-        "t3 = (1, 2, 3)\n",
-        "t4 = 1, 2, 3\n",
-        "t5 = ('a', 'b', ('ab', 'cd'))\n",
-        "t1\n"
+        ">>> t1 = (1, 2, 'a', 'b')\n",
+        ">>> t1[0]\n",
+        "1\n",
+        ">>> t1[3]\n",
+        "\n",
+        "\n"
       ]
     }
   ]
