Colaboratory를 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -30,9 +30,9 @@
       "cell_type": "markdown",
       "source": [
         "#🐹 🐾  Five Types of Data\n",
-        "        Number, String, List, Tuple, Dictionary\n",
+        "        Number(숫자), String(문자열), List(리스트), Tuple(튜플), Dictionary(사전)\n",
         "\n",
-        "Variables can be either a number or a sequence.     \n",
+        "Variables can be either a number or a sequence(일련).     \n",
         "\n",
         "1️⃣ Numbers can be either integers, floats, or imaginary numbers.\n",
         "- interger 정수 : -100, -30, -11, 0, 1, 5, 100, 302, etc.\n",
@@ -110,6 +110,31 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown ☔ Assign 1 to variable a\n",
+        "a=1\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "Ulsmy360qVld",
+        "outputId": "0a9b89ff-1dfc-4f2f-acf9-5534463cc328",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Assign 2 to a variable b.\n",
         "b = 2\n",
         "print (b)"
@@ -135,6 +160,31 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown ☔ Assign 2 to variable b\n",
+        "b=2\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "0NUkH6tUq6w6",
+        "outputId": "9ddec124-bca4-410e-c044-ed3cc735bea9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Use a print function and a Boolean operator +\n",
         "print(a + b)"
       ],
@@ -146,6 +196,30 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ☔ Use a print function and a Boolean operator +\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "id": "g9Zvf8H7q-pY",
+        "outputId": "4cd1f0a2-834e-44b4-b3d2-c3893eb1d171",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,19 +269,132 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown ☔ Assign a string to a variable c\n",
+        "c=\"I love Python\"\n",
+        "print (c)"
+      ],
+      "metadata": {
+        "id": "QSC4MS-ptBPJ",
+        "outputId": "5bd8105c-477a-43fc-a7fc-9821ed4a5d8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 To assign valid variable names\n",
         "a = 'Lori'\n",
         "_b = 'Sam'\n",
         "a_b = 'Ken'\n",
         "c_d = 'Jen'\n",
         "\n",
-        "a = 'Emma' # Be aware that variable a is used two times!"
+        "a = 'Emma' # Be aware that variable a is used two times!\n"
       ],
       "metadata": {
         "id": "FqAo7mMFEfjd"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ☔ To assign valid variable names\n",
+        "a = 'Lori'\n",
+        "print(a)\n",
+        "\n",
+        "b = 'Sam'\n",
+        "print(b)\n",
+        "\n",
+        "a_b = 'Ken'\n",
+        "print(a_b)\n",
+        "\n",
+        "c_d = 'Jen'\n",
+        "print(c_d)\n",
+        "\n",
+        "a='Emma'\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "id": "WXueoq4MuAI_",
+        "outputId": "fc68be26-7868-492a-f614-ce266ca5e4ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lori\n",
+            "Sam\n",
+            "Ken\n",
+            "Jen\n",
+            "Emma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "DCKFEJN-vlXY",
+        "outputId": "1b0554f4-e69b-4a3c-a1b7-0caede08d44b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Emma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "thing= \"I love Sam's pencil case?\"\n",
+        "print(thing)"
+      ],
+      "metadata": {
+        "id": "xgUhpQPPwAcP",
+        "outputId": "6f0313cc-8567-47b7-c6e1-8cc83c748364",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love Sam's pencil case?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
