Colaboratory를 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "FqAo7mMFEfjd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,6 +592,34 @@
     {
       "cell_type": "code",
       "source": [
+        "k={\"Mercury\":\"수성\", \"Venus\":\"금성\", \"Earth\":\"지구\", \"Mars\":\"화성\", \"Jupiter\":\"목성\", \"Saturn\":\"토성\", \"Uranus\":\"천왕성\", \"Neptune\":\"해왕성\"}\n",
+        "print(k)\n",
+        "\n",
+        "m={\"Mercury 수성\":1, \"Venus 금성\":2, \"Earth 지구\":3, \"Mars 화성\":4, \"Jupiter 목성\":5, \"Saturn 토성\":6, \"Uranus 천왕성\":7, \"Neptune 해왕성\":8}\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "id": "NAW1hegjax6S",
+        "outputId": "ba1d386f-b350-4f7f-831e-86b61f01cde7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Mercury': '수성', 'Venus': '금성', 'Earth': '지구', 'Mars': '화성', 'Jupiter': '목성', 'Saturn': '토성', 'Uranus': '천왕성', 'Neptune': '해왕성'}\n",
+            "{'Mercury 수성': 1, 'Venus 금성': 2, 'Earth 지구': 3, 'Mars 화성': 4, 'Jupiter 목성': 5, 'Saturn 토성': 6, 'Uranus 천왕성': 7, 'Neptune 해왕성': 8}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Print the value of key 'a' ('a' as string data)\n",
         "dict = {'a':1, 'b':2, 'c':3}\n",
         "print (dict)\n",
@@ -612,6 +640,81 @@
           "text": [
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from re import M\n",
+        "dict={'a':1, 'b':2, 'c':3}\n"
+      ],
+      "metadata": {
+        "id": "KgwV3Y2xap_0"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict={'a':1, 'b':2, 'c':3}\n",
+        "print(k)\n",
+        "print(m)\n",
+        "print(dict)\n",
+        "print('a')\n",
+        "\n",
+        "dict['a']=7\n",
+        "\n",
+        "print(dict)"
+      ],
+      "metadata": {
+        "id": "dT1ZBzMDbg4b",
+        "outputId": "03e6ebbf-a2e3-4b5f-f1d2-6f0370beae33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Mercury': '수성', 'Venus': '금성', 'Earth': '지구', 'Mars': '화성', 'Jupiter': '목성', 'Saturn': '토성', 'Uranus': '천왕성', 'Neptune': '해왕성'}\n",
+            "{'Mercury 수성': 1, 'Venus 금성': 2, 'Earth 지구': 3, 'Mars 화성': 4, 'Jupiter 목성': 5, 'Saturn 토성': 6, 'Uranus 천왕성': 7, 'Neptune 해왕성': 8}\n",
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "a\n",
+            "{'a': 7, 'b': 2, 'c': 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict={'a':1, 'b':2, 'c':3}\n",
+        "print(dict)\n",
+        "\n",
+        "dict['a']=7\n",
+        "print(dict)"
+      ],
+      "metadata": {
+        "id": "OXSav24Wclx9",
+        "outputId": "066dd0e1-4ebd-48c9-85ba-57233f42a724",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "{'a': 7, 'b': 2, 'c': 3}\n"
           ]
         }
       ]
@@ -649,6 +752,31 @@
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "{'a': 7, 'b': 2, 'c': 3}\n",
             "{'c': 10, 'b': 20, 'a': 30}\n",
+            "{'c': 10, 'b': 20, 'a': 300}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_data={'c':10, 'b':20, 'a':30}\n",
+        "dict_data['a']=300\n",
+        "print(dict_data)"
+      ],
+      "metadata": {
+        "id": "OCSjlVKmdqNQ",
+        "outputId": "f2b9a41d-5a66-4ee3-8dd0-5f1783e6689f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "{'c': 10, 'b': 20, 'a': 300}\n"
           ]
         }
