Colaboratory를 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -94,7 +94,7 @@
         "id": "PvGMfK2n4KC-",
         "outputId": "82a4e039-0da2-4e77-899c-73db7e7cdf1d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "q87JgVPm3_YK",
         "outputId": "21f158ae-56d9-48d5-b1d2-5540bef4d7b5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
         "id": "J2qp74f44hof",
         "outputId": "c3d8c954-2404-4bc4-da2d-4067c30fa773"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "id": "ysWTC7-h5OSB",
         "outputId": "3cedc3ca-51d4-4a78-b4da-eabeb660a79a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,6 +279,42 @@
       "metadata": {
         "id": "qkd3saTwMQxP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1):\n",
+        "  print(i)\n",
+        "\n",
+        "type(1)"
+      ],
+      "metadata": {
+        "id": "es7gyC0Zt8q8",
+        "outputId": "f1680cd9-ce65-4295-817b-3f07b10d3afa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -359,6 +395,50 @@
       "source": [
         "for y in range(10):\n",
         "  print(y)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "N1Cux0UOvNtI",
+        "outputId": "0d2edc6b-63e5-4280-bc8a-1015cf0f1afc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "0\n",
+            "1\n",
+            "0\n",
+            "2\n",
+            "0\n",
+            "3\n",
+            "0\n",
+            "4\n",
+            "0\n",
+            "5\n",
+            "0\n",
+            "6\n",
+            "0\n",
+            "7\n",
+            "0\n",
+            "8\n",
+            "0\n",
+            "9\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for y in range(10):\n",
+        "  print(y)\n",
         "\n",
         "type(y)"
       ],
@@ -402,6 +482,33 @@
     {
       "cell_type": "code",
       "source": [
+        "var=\"0123456789\"\n",
+        "len(var)"
+      ],
+      "metadata": {
+        "id": "MMhEt3OXwNG0",
+        "outputId": "05d37e4e-a825-4ec7-a58d-a2a7d5d23329",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "for z in range(0):\n",
         "  print(z)\n",
         "\n",
@@ -411,6 +518,18 @@
         "id": "-k9JKHlmIZEk"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for z in range(0):\n",
+        "  print(Z)"
+      ],
+      "metadata": {
+        "id": "inYn72-evwat"
+      },
+      "execution_count": 6,
       "outputs": []
     },
     {
