Colaboratory를 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -289,11 +289,11 @@
         "type(1)"
       ],
       "metadata": {
-        "id": "es7gyC0Zt8q8",
-        "outputId": "f1680cd9-ce65-4295-817b-3f07b10d3afa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "es7gyC0Zt8q8",
+        "outputId": "f1680cd9-ce65-4295-817b-3f07b10d3afa"
       },
       "execution_count": 2,
       "outputs": [
@@ -398,11 +398,11 @@
         ""
       ],
       "metadata": {
-        "id": "N1Cux0UOvNtI",
-        "outputId": "0d2edc6b-63e5-4280-bc8a-1015cf0f1afc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "N1Cux0UOvNtI",
+        "outputId": "0d2edc6b-63e5-4280-bc8a-1015cf0f1afc"
       },
       "execution_count": 4,
       "outputs": [
@@ -486,11 +486,11 @@
         "len(var)"
       ],
       "metadata": {
-        "id": "MMhEt3OXwNG0",
-        "outputId": "05d37e4e-a825-4ec7-a58d-a2a7d5d23329",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MMhEt3OXwNG0",
+        "outputId": "05d37e4e-a825-4ec7-a58d-a2a7d5d23329"
       },
       "execution_count": 8,
       "outputs": [
@@ -566,6 +566,35 @@
     {
       "cell_type": "code",
       "source": [
+        "list_fruit=['apple', 'orange','banana','strawberry']\n",
+        "\n",
+        "for i in list_fruit:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "6_c3W3qTzQfL",
+        "outputId": "040659f1-9edf-4171-e514-9f5245719ce1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "orange\n",
+            "banana\n",
+            "strawberry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "string ='abcde'\n",
         "\n",
         "for c in string:\n",
@@ -589,6 +618,36 @@
             "c\n",
             "d\n",
             "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string='inseo'\n",
+        "\n",
+        "for c in string:\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "id": "29YpXHqIzr_S",
+        "outputId": "72d52ba0-5904-4d83-df75-b501bdd7c67d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i\n",
+            "n\n",
+            "s\n",
+            "e\n",
+            "o\n"
           ]
         }
       ]
@@ -621,6 +680,104 @@
             "5\n",
             "1\n",
             "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_int = [1,2,3,4,5]\n",
+        "\n",
+        "for c in list_int:\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "id": "lmoMz_B0z96s",
+        "outputId": "0b0683c0-adcc-4af5-a595-252c11c3253f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(list_int[0])\n",
+        "print([0])"
+      ],
+      "metadata": {
+        "id": "T8iN8wtJ0bZZ",
+        "outputId": "f2c5f2d5-b78d-43b5-b44e-d7e57c9b3b30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dicct2={'a':100,'b':200,'c':300}\n",
+        "\n",
+        "for i in dict2:\n",
+        "  print(i)\n",
+        "\n",
+        "print(dict2['a'])\n",
+        "\n",
+        "list=[100,200,300]\n",
+        "for y in list:\n",
+        "  print(y)\n",
+        "\n",
+        "print(list[0])\n",
+        "\n",
+        "#print(dict2{0})"
+      ],
+      "metadata": {
+        "id": "sLUsYuSf3mcJ",
+        "outputId": "14c06671-2e74-4690-f689-f4dc1d3ca8d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "100\n",
+            "100\n",
+            "200\n",
+            "300\n",
+            "100\n"
           ]
         }
       ]
@@ -667,6 +824,33 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict1={'a':97,'b':98, 'c':99}\n",
+        "for i in dict1:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Z1xjKHqT1ZJm",
+        "outputId": "909c4b04-21ee-4f51-84e1-2641d094d1cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,6 +997,56 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "scope2\n",
+        "[1,2,3,4,5,6,7,8,9,10,11]\n",
+        "i< 10"
+      ],
+      "metadata": {
+        "id": "RI1hmpKn4wJu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope2= [1,2,3,4,5,6,7,8,9,10,11]\n",
+        "\n",
+        "for i in scope2:\n",
+        "  print(i)\n",
+        "  if i<10:\n",
+        "    continue\n",
+        "  else:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "oYZLY_o7442F",
+        "outputId": "817d695c-996c-4701-ad81-321f4cce2eb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "scope=[1,2,3,4,5]\n",
@@ -822,16 +1056,16 @@
         "  if i<3:\n",
         "    continue      # 이 경우 continue 없이도 코드라인 작성 가능\n",
         "  else:\n",
-        "    break"
+        "    print('perfact')"
       ],
       "metadata": {
         "id": "dlwhZZ_oRQaQ",
-        "outputId": "df411d76-475b-4d8f-b6b3-1e509e48a8f8",
+        "outputId": "9bf30d81-6224-494a-bb46-54957a506323",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,10 +1073,24 @@
           "text": [
             "1\n",
             "2\n",
-            "3\n"
+            "3\n",
+            "perfact\n",
+            "4\n",
+            "perfact\n",
+            "5\n",
+            "perfact\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "msof_tJ64MST"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
