Colaboratory를 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -49,6 +49,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  print(parame)\n",
+        "except:\n",
+        "  print('Exeption')"
+      ],
+      "metadata": {
+        "id": "IBKq2fUw7aPP",
+        "outputId": "943bd8eb-32e8-4a7f-eb07-8a6e01351959",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exeption\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
