Colaboratory를 통해 생성됨

--- a/Untitled23.ipynb
+++ b/Untitled23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqN0JccAyJABAAwsbXLgzt",
+      "authorship_tag": "ABX9TyNKa8Ec3yRcHZS176f14j2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,43 +30,34 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "awXe2i0ViEzU",
-        "outputId": "b5cd3482-e32f-475c-e6a5-a385a2f2c9fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1zU8wwM0MwtD",
+        "outputId": "597cdb24-b29f-4072-99ce-f7ba90f7d0ce"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n",
-            "7\n",
-            "3\n",
-            "10\n"
+            "2 4 6 8 10 12 14 16 18 \n",
+            "3 6 9 12 15 18 21 24 27 \n",
+            "4 8 12 16 20 24 28 32 36 \n",
+            "5 10 15 20 25 30 35 40 45 \n",
+            "6 12 18 24 30 36 42 48 54 \n",
+            "7 14 21 28 35 42 49 56 63 \n",
+            "8 16 24 32 40 48 56 64 72 \n",
+            "9 18 27 36 45 54 63 72 81 \n"
           ]
         }
       ],
       "source": [
-        "# calculator2.py\n",
-        "result1 = 0\n",
-        "result2 = 0\n",
-        "\n",
-        "def add1(num):  # 계산기1\n",
-        "    global result1\n",
-        "    result1 += num\n",
-        "    return result1\n",
-        "\n",
-        "def add2(num):  # 계산기2\n",
-        "    global result2\n",
-        "    result2 += num\n",
-        "    return result2\n",
-        "\n",
-        "print(add1(3))\n",
-        "print(add1(4))\n",
-        "print(add2(3))\n",
-        "print(add2(7))\n"
+        ">>> for i in range(2,10):        # 1번 for문\n",
+        "...     for j in range(1, 10):   # 2번 for문\n",
+        "...         print(i*j, end=\" \")\n",
+        "...     print('')\n",
+        "...\n"
       ]
     }
   ]
