Colaboratory를 통해 생성됨

--- a/5_RegularExpression.ipynb
+++ b/5_RegularExpression.ipynb
@@ -172,6 +172,43 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text=\"cat, hat, bat, sat, mat, combat, unbated\"\n",
+        "pattern =r\".at\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "aIJrpkb9rS7F",
+        "outputId": "a83cc127-a4e3-4b80-cece-c1ea577f0436",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match: hat\n",
+            "Match: bat\n",
+            "Match: sat\n",
+            "Match: mat\n",
+            "Match: bat\n",
+            "Match: bat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#1a 💣💊COMPARE\n",
         "text2 = \"at, cat, at, hat, bat, sat, mat, combat, unbated\"\n",
         "\n",
@@ -188,6 +225,41 @@
         "outputId": "9de03068-d8a7-4e76-8315-d3429da7cc85"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match:  at\n",
+            "Match: hat\n",
+            "Match: bat\n",
+            "Match: sat\n",
+            "Match: mat\n",
+            "Match: bat\n",
+            "Match: bat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text2=\"at, cat, at, hat, bat, sat, mat, combat, unbated\"\n",
+        "\n",
+        "matches=re.findall(pattern,text2)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "MMDFrDo5rVvb",
+        "outputId": "48da9e4c-a89c-4e44-9112-4a5ff833eefe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,6 +314,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "text=\"color or colour?\"\n",
+        "pattern = r\"colou?r\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "-cP3mKygtTHA",
+        "outputId": "7a3c38ce-f209-4b96-c2da-c516873e572e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: color\n",
+            "Match: colour\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#2a 💣💊COMPARE\n",
         "text2 = \"color, colour, or coloer?\"\n",
         "pattern = r\"colou?r\"  # u는 0 또는 1번 나타날 수 있음.\n",
@@ -259,6 +362,36 @@
         "outputId": "a1da7147-1bcc-4fd0-f12b-e5b2b8c503b7"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: color\n",
+            "Match: colour\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text2 = \"color, colour, or coloer?\"\n",
+        "pattern = r\"colou?r\"\n",
+        "\n",
+        "matches = re.findall(pattern, text2)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "hCPZxFRlt6oV",
+        "outputId": "7c325db2-71e3-4381-9944-e00cb9c99d55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,6 +436,41 @@
             "Match: abbc\n",
             "Match: abbc\n",
             "Match: abbbbbbbbbbbbbbc\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"ab, ac, abc, abbc, aabbc, abbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbc\"\n",
+        "pattern = r\"ab*c\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)"
+      ],
+      "metadata": {
+        "id": "H_Jp1Mg7ujtB",
+        "outputId": "170a3746-c6e4-475a-d9b6-06bb162f0f33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: ac\n",
+            "Match: abc\n",
+            "Match: abbc\n",
+            "Match: abbc\n",
+            "Match: abbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbc\n"
           ]
         }
       ]
